--- a/VR_VA.csproj
+++ b/VR_VA.csproj
@@ -273,6 +273,7 @@
     <Compile Include="Assets\SteamVR_Unity_Toolkit\Scripts\VRTK_Simulator.cs" />
     <Compile Include="Assets\SteamVR_Unity_Toolkit\Scripts\VRTK_TouchpadWalking.cs" />
     <Compile Include="Assets\SteamVR_Unity_Toolkit\Scripts\VRTK_UIPointer.cs" />
+    <Compile Include="Assets\TestTest.cs" />
     <Compile Include="Assets\TetrahedronBehaviour.cs" />
     <Compile Include="Assets\TiledCubeVariables.cs" />
     <Compile Include="Assets\TiledTetrahedronVariables.cs" />
