--- a/VR_VA.csproj
+++ b/VR_VA.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Assets\Scripts\SwapBetweenMenus.cs" />
     <Compile Include="Assets\Scripts\Tetrahedron.cs" />
     <Compile Include="Assets\Scripts\TetrahedronMesh.cs" />
+    <Compile Include="Assets\Scripts\TiledmapGeneration.cs" />
     <Compile Include="Assets\Scripts\ToggleEucledianManhattan.cs" />
     <Compile Include="Assets\Scripts\ToggleSingleMultiCentered.cs" />
     <Compile Include="Assets\Scripts\ToggleSprite.cs" />
