--- a/VR_VA.csproj
+++ b/VR_VA.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Assets\Scripts\ShowOrHideDatasets.cs" />
     <Compile Include="Assets\Scripts\ShowOrHideVisualizations.cs" />
     <Compile Include="Assets\Scripts\ShowProperAlgorithmButtons.cs" />
+    <Compile Include="Assets\Scripts\SilhouetteCoefficient.cs" />
     <Compile Include="Assets\Scripts\SquareGaussian.cs" />
     <Compile Include="Assets\Scripts\SwapBetweenMenus.cs" />
     <Compile Include="Assets\Scripts\Tetrahedron.cs" />
